%% glpkAPI Version History

\name{NEWS}
\title{glpkAPI News}
\encoding{UTF-8}

% ---------------------------------------------------------------------------- %
\section{Changes in version 1.3.3 2021-10-28}{
  \itemize{
    \item Fix for CRAN issue concerning deprecated autoconf macros.
  }
}

% ---------------------------------------------------------------------------- %
\section{Changes in version 1.3.2 2020-02-13}{
  \itemize{
    \item Quick fix for CRAN issue: 'config' variable 'CPP' is deprecated.
  }
}

% ---------------------------------------------------------------------------- %
\section{Changes in version 1.3.1 2018-09-13}{
  \itemize{
    \item{fixed a bug where an allocating function was called with an unprotected
        allocated R object in a makro funtion defined in \file{glpkAPI.h}.}
    \item{changed package maintainer}
  }
}


% ---------------------------------------------------------------------------- %
\section{Changes in version 1.3.0 2015-01-05}{
  \itemize{
    \item added new vignette that describes the use of glpkAPI and GNU MathProg 
    	language (GMPL). Thanks to Louis Luangkesorn.
    \item{changed package maintainer}
  }
}


% ---------------------------------------------------------------------------- %
\section{Changes in version 1.2.11 2014-11-16}{
  \itemize{
    \item added bsais factorization control parameters: \code{GLP_BF_LUF}
          and \code{GLP_BF_BTF}
  }
}


% ---------------------------------------------------------------------------- %
\section{Changes in version 1.2.10 2014-01-08}{
  \itemize{
    \item wring column or row indices to \code{setMatRowGLPK} and
          \code{setMatColGLPK} will not longer stop the running R session
    \item fixed a bug in functions \code{delRowsGLPK} and \code{delColsGLPK}
  }
}


% ---------------------------------------------------------------------------- %
\section{Changes in version 1.2.9 2013-07-27}{
  \itemize{