@@ -5,6 +5,15 @@
 \encoding{UTF-8}
 
 % ---------------------------------------------------------------------------- %
+\section{Changes in version 1.3.4 2022-10-09}{
+  \itemize{
+    \item Fix for CRAN issue concerning function declarations without prototype.
+    \item Repository moved to GitHub and will be discontinued and archived on GitLab. 
+      New location: \url{https://github.com/SysBioChalmers/sybil-glpkapi}.
+  }
+}
+
+% ---------------------------------------------------------------------------- %
 \section{Changes in version 1.3.3 2021-10-28}{
   \itemize{
     \item Fix for CRAN issue concerning deprecated autoconf macros.
